--- a/style/style.css
+++ b/style/style.css
@@ -24,8 +24,6 @@ hr {
     opacity: 1;
 }
 
-
-
 p {
     margin-top: 0;
     margin-bottom: 0;
@@ -46,6 +44,15 @@ a:not([href]):not([class]):hover {
     color: inherit;
     text-decoration: none;
 }
+
+
+button#toggle-menu {
+    background-color: transparent;
+    border: 0;
+    color: #FFFFFF;
+    display: none;
+}
+
 
 .bg-notify {
     background-color: #4B79EF;
