--- a/style/xs.css
+++ b/style/xs.css
@@ -435,19 +435,12 @@
         height: 221px;
         left: 18px;
         top: 270.69px;
-       
+
         opacity: 1;
         background: url('../images/tablet-sm.svg') no-repeat;
         background-size: contain;
         z-index: 3;
     }
-
-
-
-
-
-
-
 
     .card {
         height: 250px;
@@ -612,6 +605,685 @@
         z-index: -1;
     }
 
+
+    .primary-screen-end-block img.techno-primary-image {
+        width: 400px;
+        height: 380px;
+        left: 50%;
+        margin-left: -214px;
+        top: -60px;
+        position: absolute;
+        z-index: 5;
+    }
+
+
+    .primary-screen-start-block .title.techno-title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 800;
+        font-size: 32px;
+        line-height: 110%;
+        text-align: center;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        mix-blend-mode: normal;
+        text-shadow: 0px 2.99358px 23.9487px rgba(0, 0, 0, 0.25);
+        margin-bottom: 15px;
+    }
+
+    .primary-screen-techno-end-block .gradient-round {
+        position: absolute;
+        width: 1px;
+        height: 559px;
+        left: -137.38px;
+        top: 92.39px;
+        border-radius: 280px;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.476) 49.72%, rgba(201, 76, 244, 0.4) 75.27%);
+        filter: blur(92px);
+        z-index: 2;
+    }
+
+    .primary-screen-techno-end-block .gradient-circle {
+        position: absolute;
+        width: 307.43px;
+        height: 307px;
+        left: 50%;
+        margin-left: -153px;
+        top: 20px;
+        background: rgba(76, 93, 244, 0.5);
+        filter: blur(56.9345px);
+        z-index: 1;
+    }
+
+    /* .techno-bg-gradient::after {
+        content: '';
+        position: absolute;
+        width: 370px;
+        height: 1375px;
+        left: 0px;
+        top: 10px;
+        background-color: #f09;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
+        filter: blur(186.5px);
+        transform: rotate(90deg);
+    } */
+
+    .fundation {
+        height: 457px;
+        position: relative;
+        z-index: 1;
+        margin-top: 120px;
+    }
+
+    .fundation::before {
+        content: '';
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(82.66deg, rgba(37, 203, 255, 0.2632) 49.72%, rgba(201, 76, 244, 0.28) 75.27%);
+        filter: blur(186.5px);
+        transform: rotate(90deg);
+        z-index: -1;
+    }
+
+    .in-fundation {
+        margin-top: 70px;
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .in-fundation .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 120%;
+        text-align: center;
+        color: #FFFFFF;
+    }
+
+    .in-fundation .title strong {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 120%;
+        text-align: center;
+        background: linear-gradient(90deg, rgba(50, 194, 255, 0.4) 0%, rgba(142, 122, 249, 0.4) 55.6%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+
+    .in-fundation .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
+    }
+
+    .grid-col {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        position: relative;
+        width: 100%;
+        margin: 0 auto;
+    }
+
+    .ggrid {
+        height: 380px;
+        position: absolute;
+        height: 80px;
+        /* width: 100%; */
+        left: 41px;
+        top: 14px;
+        background: url('../images/grid-techno.svg') no-repeat;
+        background-size: contain;
+    }
+
+    .grid-col .gc {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 9px;
+        line-height: 140%;
+        text-align: center;
+        text-transform: uppercase;
+        background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.2) -32.37%, rgba(37, 203, 255, 0.2) 93.03%), linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.105) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(2.32847px);
+        width: 79.83px;
+        height: 25.96px;
+        border-radius: 6.65278px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 9.97917px 8.64861px;
+        gap: 13.31px;
+    }
+
+    .grid-col .gc.centerer {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 900;
+        font-size: 15px;
+        width: 129.73px;
+        height: 43.24px;
+        padding: 16.2161px 14.054px;
+        gap: 21.62px;
+        width: 129.73px;
+        height: 43.24px;
+        background: linear-gradient(90.4deg, #C94CF4 -32.37%, #25CBFF 93.03%), linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.105) 98.69%), rgba(255, 255, 255, 0.06);
+        box-shadow: 0px 0px 61.6214px #57A6FC;
+        backdrop-filter: blur(3.78377px);
+        border-radius: 9.97917px;
+    }
+
+    .grid-col .gc:before {
+        content: '';
+        position: absolute;
+        width: 79.17px;
+        height: 26.61px;
+        left: 50%;
+        margin-left: -40px;
+        top: 10px;
+        background: #4C5DF4;
+        filter: blur(32.266px);
+        z-index: -1;
+    }
+
+    .grid-col .gc:first-child {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    .grid-col .gc:nth-child(2) {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    .grid-col .gc.centerer {
+        position: absolute;
+        top: 27px;
+        left: 50%;
+        margin-left: -65px;
+    }
+
+    .grid-col .gc:nth-child(4) {
+        position: absolute;
+        top: 70px;
+        left: 0;
+    }
+
+    .grid-col .gc:nth-child(5) {
+        position: absolute;
+        top: 70px;
+        right: 0;
+    }
+
+    .jumbo {
+        height: auto;
+        min-height: 475px;
+        position: relative;
+        margin-bottom: 100px;
+    }
+
+    .jumbo .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 120%;
+        text-align: center;
+        background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        margin-top: 10px;
+    }
+
+    .jumbo .text {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-shadow: 0px 1.42104px 11.3683px rgba(0, 0, 0, 0.25);
+        max-width: 320px;
+        margin: 0 auto;
+    }
+
+    #second-jumbo.jumbo {
+        height: 570px;
+        position: relative;
+        margin-bottom: 100px;
+    }
+
+    #second-jumbo::before {
+        content: '';
+        position: absolute;
+        width: 604px;
+        height: 375px;
+        left: 0;
+        top: 0;
+        background: linear-gradient(81.95deg, rgba(37, 203, 255, 0.2632) 14.78%, rgba(76, 133, 244, 0.28) 48.04%);
+        filter: blur(186.5px);
+        transform: rotate(90deg);
+        z-index: -1;
+    }
+
+    #first-jumbo .to-image {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: 50%;
+        margin-left: -157px;
+        top: 155px;
+        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.44091px);
+        border-radius: 17.1818px;
+        z-index: -1;
+    }
+
+    #first-jumbo img {
+        position: relative;
+        width: 423px;
+        height: 387.08px;
+        left: -57px;
+        top: -45px;
+    }
+
+    #first-jumbo .gradient-circle {
+        position: absolute;
+        width: 314.87px;
+        height: 314.43px;
+        left: calc(50% - 314.87px/2 - 0.35px);
+        top: calc(50% - 314.43px/2 + 1.07px);
+        background: rgba(76, 93, 244, 0.3);
+        filter: blur(58.3122px);
+    }
+
+    #second-jumbo::before {
+        content: '';
+        position: absolute;
+        width: 400px;
+        height: 570px;
+        left: 0;
+        top: 0;
+        background: linear-gradient(81.95deg, rgba(37, 203, 255, 0.2632) 14.78%, rgba(76, 133, 244, 0.28) 48.04%);
+        filter: blur(186.5px);
+        z-index: -1;
+    }
+
+    #second-jumbo .to-image {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: 50%;
+        margin-left: -157px;
+        top: 260px;
+        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.44091px);
+        border-radius: 17.1818px;
+        z-index: -1;
+    }
+
+    #second-jumbo img {
+        position: relative;
+        width: 296px;
+        height: 381.08px;
+        left: 19px;
+        top: -65px;
+    }
+
+    #second-jumbo .gradient-circle {
+        position: absolute;
+        position: absolute;
+        width: 295.88px;
+        height: 296.3px;
+        left: calc(50% - 295.88px/2 + 9.44px);
+        top: calc(50% - 296.3px/2 + 10.42px);
+        background: #0997FF;
+        filter: blur(54.7947px);
+    }
+
+    #third-jumbo.jumbo {
+        height: 510px;
+        position: relative;
+        margin-bottom: 100px;
+    }
+
+    #third-jumbo::before {
+        content: '';
+        position: absolute;
+        width: 1440px;
+        height: 509.64px;
+        left: 0;
+        top: 126.75px;
+        background: linear-gradient(88.7deg, rgba(37, 203, 255, 0.2) 28.76%, rgba(201, 76, 244, 0.2) 61.12%);
+        filter: blur(247px);
+        transform: matrix(-1, 0, 0, 1, 0, 0);
+        z-index: -1;
+    }
+
+    #third-jumbo .to-image {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: 50%;
+        margin-left: -157px;
+        top: 200px;
+        background: linear-gradient(78.84deg, rgba(225, 9, 165, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.44091px);
+        border-radius: 17.1818px;
+        z-index: -1;
+    }
+
+    #third-jumbo img {
+        position: relative;
+        width: 333.33px;
+        height: 352.23px;
+        left: 0px;
+        top: -37.23px;
+    }
+
+    #third-jumbo .gradient-circle {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 + 0.22px);
+        top: calc(50% - 315px/2 + 12.03px);
+        background: #0989FF;
+        filter: blur(58.4182px);
+    }
+
+    #third-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 - 0.35px);
+        top: calc(50% - 315px/2 + 1.07px);
+        background: rgba(76, 93, 244, 0.3);
+        filter: blur(58.4182px);
+    }
+
+    #fourth-jumbo.jumbo {
+        height: 570px;
+        position: relative;
+        margin-bottom: 100px;
+    }
+
+    #fourth-jumbo::before {
+        content: '';
+        position: absolute;
+        width: 375px;
+        height: 600px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(81.95deg, rgba(255, 37, 233, 0.7332) 14.78%, rgba(85, 0, 124, 0.78) 48.04%);
+        filter: blur(186.5px);
+        z-index: -1;
+    }
+
+    #fourth-jumbo .to-image {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: 50%;
+        margin-left: -157px;
+        top: 180px;
+        background: linear-gradient(78.84deg, rgba(225, 9, 165, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.44091px);
+        border-radius: 17.1818px;
+        z-index: -1;
+    }
+
+    #fourth-jumbo img {
+        position: relative;
+        width: 420.19px;
+        height: 386.15px;
+        left: -48px;
+        top: -42px;
+        filter: drop-shadow(0px 0px 24.0545px #C94CF4);
+    }
+
+    #fourth-jumbo .gradient-circle {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 - 0.35px);
+        top: calc(50% - 315px/2 + 1.07px);
+        background: rgba(76, 93, 244, 0.3);
+        filter: blur(58.4182px);
+    }
+
+    #fourth-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 - 0.35px);
+        top: calc(50% - 315px/2 - 0.29px);
+        background: #C94CF4;
+        filter: blur(58.4182px);
+    }
+
+    #fourth-jumbo .gradient-circle-left {
+        position: absolute;
+        width: 143px;
+        height: 144px;
+        left: 46px;
+        top: 146.5px;
+        background: rgba(238, 133, 255, 0.77);
+        mix-blend-mode: hard-light;
+        filter: blur(27px);
+    }
+
+    #fifth-jumbo.jumbo {
+        height: 520px;
+        position: relative;
+        margin-bottom: 5px;
+    }
+
+    #fifth-jumbo::before {
+        content: '';
+        position: absolute;
+        width: 604px;
+        height: 375px;
+        left: 0px;
+        top: 0px;
+        background: linear-gradient(79.36deg, rgba(210, 51, 250, 0.78) 32.15%, rgba(0, 47, 211, 0.7332) 64.88%);
+        filter: blur(186.5px);
+        transform: rotate(90deg);
+        z-index: -1;
+    }
+
+    #fourth-jumbo .gradient-circle-center {
+        position: absolute;
+        width: 81.9px;
+        height: 82.47px;
+        left: 148.91px;
+        top: 35.22px;
+        background: rgba(238, 133, 255, 0.77);
+        mix-blend-mode: hard-light;
+        filter: blur(15.4636px);
+    }
+
+    #fourth-jumbo .gradient-circle-right {
+        position: absolute;
+        width: 81.9px;
+        height: 82.47px;
+        left: 148.91px;
+        top: 195.01px;
+        background: rgba(238, 133, 255, 0.77);
+        mix-blend-mode: hard-light;
+        filter: blur(15.4636px);
+    }
+
+    #fifth-jumbo .to-image {
+        position: absolute;
+        width: 315px;
+        height: 315px;
+        left: 50%;
+        margin-left: -157px;
+        top: 165px;
+        background: linear-gradient(78.84deg, rgba(91, 9, 225, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        backdrop-filter: blur(5.44091px);
+        border-radius: 17.1818px;
+        z-index: -1;
+    }
+
+    #fifth-jumbo .gradient-circle {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 - 0.35px);
+        top: calc(50% - 315px/2 + 1.07px);
+        background: rgba(76, 93, 244, 0.3);
+        filter: blur(58.4182px);
+    }
+
+    #fifth-jumbo .gradient-circle-sm {
+        position: absolute;
+        width: 315.44px;
+        height: 315px;
+        left: calc(50% - 315.44px/2 + 0.22px);
+        top: calc(50% - 315px/2 + 12.03px);
+        background: #0989FF;
+        filter: blur(58.4182px);
+    }
+
+    #fifth-jumbo img {
+        position: relative;
+        position: absolute;
+        width: 315px;
+        height: 342.49px;
+        left: 0px;
+        top: -27.49px;
+    }
+
+    #techno-form {
+        height: 570px;
+        margin-bottom: 0px;
+        position: relative;
+        z-index: 1;
+    }
+
+    #techno-form::before {
+        content: '';
+        position: absolute;
+        width: 1055px;
+        height: 550px;
+        left: 0px;
+        top: 0px;
+        background: rgba(76, 93, 244, 0.2);
+        filter: blur(150px);
+        z-index: -1;
+    }
+
+    #techno-form::after {
+        content: '';
+        position: absolute;
+        width: 460px;
+        height: 646px;
+        left: 50%;
+        margin-left: -205px;
+        top: -47px;
+        background: url('../images/ask.svg') no-repeat;
+        background-size: cover;
+        transform: rotate(0deg);
+        z-index: -1;
+    }
+
+    .subscribe-box .title {
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 42px;
+        line-height: 120%;
+        text-align: center;
+        background: linear-gradient(90deg, rgba(50, 194, 255, 0.4) 0%, rgba(142, 122, 249, 0.4) 55.6%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+    }
+
+    .subscribe-box .text {
+        max-width: 300px;
+        margin: 0 auto;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        text-align: center;
+        background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-clip: text;
+        text-shadow: 0px 2.49702px 19.9761px rgba(0, 0, 0, 0.25);
+    }
+
+    .subscribe-form-box {
+        margin-top: 20px;
+    }
+
+    .subscribe-box {
+        padding-top: 85px;
+        padding-bottom: 85px;
+    }
+
+    input.subscribe-field {
+        background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.1) -32.37%, rgba(37, 203, 255, 0.1) 93.03%), linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
+        border: 1.53407px solid rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(10px);
+        width: 315px;
+        border-radius: 8px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12.5995px;
+        line-height: 11px;
+        text-align: center;
+        color: #FFFFFF;
+        text-align: left;
+        padding: 14px 24px;
+        color: #FFFFFF;
+    }
+
+    .btn-subscribe {
+        background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.6) -32.37%, rgba(37, 203, 255, 0.6) 93.03%), #FFFFFF;
+        box-shadow: 7.38405px 0px 41.3507px rgba(38, 203, 255, 0.3), -7.38405px 0px 41.3507px rgba(154, 113, 248, 0.5);
+        border-radius: 7.38405px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 11.8145px;
+        line-height: 18px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        border: 0;
+        padding: 16px 52px;
+        margin: 45px auto 0;
+        width: 135px;
+        height: 50px;
+    }
 
 
 }
