--- a/style/style.css
+++ b/style/style.css
@@ -182,6 +182,8 @@ ul.nav-pills li.nav-item.active a {
     color: #FFFFFF;
     text-transform: uppercase;
     margin-bottom: 20px;
+    z-index: 3;
+    position: relative;
 }
 
 
@@ -195,6 +197,8 @@ ul.nav-pills li.nav-item.active a {
     letter-spacing: 0.3px;
     color: #E8EDFF;
     margin-bottom: 0;
+    z-index: 3;
+    position: relative;
 }
 
 .card-about:first-child .card-about-body .name {
@@ -213,7 +217,7 @@ ul.nav-pills li.nav-item.active a {
     right: -25px;
     top: -75px;
     background: url('../images/about-1.svg');
-    z-index: -3;
+    z-index: 1;
 }
 
 .card-about:nth-child(2) .card-about-body .name {
@@ -232,7 +236,7 @@ ul.nav-pills li.nav-item.active a {
     right: -25px;
     top: -75px;
     background: url('../images/about-2.svg');
-    z-index: -3;
+    z-index: 1;
 }
 
 .card-about:nth-child(3) .card-about-body .name {
@@ -251,7 +255,7 @@ ul.nav-pills li.nav-item.active a {
     right: -25px;
     top: -75px;
     background: url('../images/about-3.svg');
-    z-index: -3;
+    z-index: 1;
 }
 
 
@@ -830,6 +834,7 @@ i.flash-fill {
     font-size: 60px;
     line-height: 90px;
     color: #FFFFFF;
+    padding-top: 23px;
 }
 
 .card-section-description {
@@ -1575,10 +1580,10 @@ i.flash-fill {
     z-index: -1;
 }
 ul.nav-tabs-map {
-    margin-top: 50px;
+    margin-top: 130px;
 }
 ul.nav-tabs-map li.nav-item {
-    margin-bottom: 65px;
+    margin-bottom: 30px;
     text-align: right;
     display: block;
     width: 100%;
@@ -1682,7 +1687,6 @@ ul.nav-tabs-map li.nav-item button span {
     text-transform: uppercase;
     color: #FFFFFF;
     margin-bottom: 10px;
-    max-width: 210px;
 }
 
 .road-card-body .text {
