--- a/style/xs.css
+++ b/style/xs.css
@@ -503,7 +503,7 @@
     .card-image {
         position: relative;
         width: 100%;
-        height: 87px;
+        height: 105px;
         overflow: hidden;
     }
 
@@ -514,7 +514,7 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 90px;
+        height: 105px;
         border-radius: 11.5px 11.5px 0px 0px;
         transition: all 0.5s;
         z-index: 3;
@@ -1651,8 +1651,10 @@
 
     .work-box-first .work-box-end,
     .work-box-third .work-box-end {
-        padding: 0 30px 0;
-        margin-top: 25px;
+        padding: 0 1px 0;
+        /* margin-top: 25px; */
+        margin: 5px auto 0px;
+        width: 334px;
     }
 
     .work-box-end .pre-text {
@@ -1674,7 +1676,7 @@
         font-style: normal;
         font-weight: 700;
         font-size: 30px;
-        line-height: 45px;
+        line-height: 35px;
         color: #FFFFFF;
     }
 
@@ -1692,8 +1694,12 @@
     }
 
     .work-box-second .work-box-end {
-        padding: 0 30px 0;
-        margin-top: 25px;
+        /* padding: 0 30px 0;
+        margin-top: 25px; */
+        padding: 0 1px 0;
+        /* margin-top: 25px; */
+        margin: 5px auto 0px;
+        width: 334px;
     }
 
     .work-box-second::before {
@@ -1738,8 +1744,10 @@
     }
 
     .work-box-third .work-box-end {
-        padding: 0 30px 0;
-        margin-top: 25px;
+        padding: 0 1px 0;
+        /* margin-top: 25px; */
+        margin: 15px auto 0px;
+        width: 334px;
     }
 
     .work-box-third::before {
@@ -1771,7 +1779,7 @@
         z-index: 1;
         position: relative;
         left: 50%;
-        margin-left: -150px;
+        margin-left: -170px;
     }
 
     .work-card .card-image {
@@ -1785,7 +1793,7 @@
     .card-img-bottom,
     .card-img-top {
         width: 100%;
-        height: 90px;
+        height: 105px;
         position: relative;
         top: 0px;
     }
@@ -1825,8 +1833,8 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
-        font-size: 12px;
-        line-height: 12px;
+        font-size: 8px;
+        line-height: 13px;
         max-width: 295px;
         color: #D1D1D1;
     }
@@ -1852,7 +1860,7 @@
         width: 220px;
         height: 358px;
         left: 50%;
-        margin-left: -50px;
+        margin-left: -40px;
         top: 4px;
         transform: scale(0.9);
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
