--- a/style/xs.css
+++ b/style/xs.css
@@ -1789,6 +1789,13 @@
         border-radius: 11px 11px 0px 0px;
     }
 
+    .work-card .work-card-img {
+        width: 100%;
+        height: 155px;
+        position: relative;
+        top: 10px;
+    }
+
     .card-img,
     .card-img-bottom,
     .card-img-top {
