--- a/style/xl.css
+++ b/style/xl.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 1200px) and (max-width: 1399px) {
     footer {
         display: none;
     }
@@ -34,7 +34,7 @@
     }
 
     a.logotype {
-        padding-left: 25px;
+        padding-left: 0px;
     }
 
     a.logotype img {
@@ -93,7 +93,7 @@
         width: 680px;
         height: 980px;
         left: 50%;
-        margin-left: -335px;
+        margin-left: -405px;
         top: -185px;
         z-index: 2;
     }
@@ -103,7 +103,7 @@
         position: absolute;
         width: 160px;
         height: 148px;
-        left: 250px;
+        left: 300px;
         top: 40px;
         background: url('../images/coin1.svg');
         transform: rotate(1deg);
@@ -115,7 +115,7 @@
         position: absolute;
         width: 132px;
         height: 150px;
-        left: 245px;
+        left: 290px;
         top: 326px;
         background: url('../images/coin22.png') no-repeat;
         background-size: contain;
@@ -127,10 +127,10 @@
         background-size: cover;
         z-index: 4;
         position: absolute;
-        width: 128px;
-        height: 128px;
-        left: 19px;
-        top: 180px;
+        width: 150px;
+        height: 150px;
+        left: 36px;
+        top: 240px;
         background: url('../images/coin3.svg');
         background-size: cover;
         /* transform: rotate(-8.35deg); */
@@ -311,6 +311,7 @@
     }
 
     .product-section .title-section {
+        padding-top: 300px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
@@ -554,6 +555,7 @@
     }
 
     .product-contact-start .title {
+        padding-top: 50px;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
@@ -567,13 +569,13 @@
     }
 
     .product-contact-start .text {
-        max-width: 450px;
+        max-width: auto;
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 400;
         font-size: 14px;
         line-height: 150%;
-        text-align: center;
+        text-align: left;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -630,10 +632,10 @@
 
     .product-contact-start .btn-order {
         position: absolute;
-        bottom: 100px;
+        bottom: 140px;
         left: 50%;
         margin: 0 auto;
-        margin-left: -245px;
+        margin-left: -320px;
     }
 
 
@@ -714,7 +716,7 @@
     } */
 
     .fundation {
-        height: 380px;
+        height: 450px;
         position: relative;
         z-index: 1;
         margin-top: 210px;
@@ -783,15 +785,15 @@
         padding: 0;
         position: relative;
         width: 100%;
-        height: 100px;
+        height: 150px;
         margin: 0 auto;
     }
 
     .lines .top-horizontal {
         position: absolute;
-        width: 90%;
-        left: 5%;
-        top: 11px;
+        width: 76%;
+        left: 10%;
+        top: 15px;
         height: 0.5px;
         opacity: 0.33;
         background-color: #AAAAAA;
@@ -801,7 +803,7 @@
         position: absolute;
         width: 76%;
         left: 12%;
-        top: 60%;
+        top: 59%;
         height: 0.5px;
         opacity: 0.33;
         background-color: #AAAAAA;
@@ -809,9 +811,9 @@
 
     .lines .bottom-horizontal {
         position: absolute;
-        width: 90%;
-        left: 5%;
-        bottom: -9px;
+        width: 77%;
+        left: 12%;
+        bottom: -14px;
         height: 0.5px;
         opacity: 0.33;
         background-color: #AAAAAA;
@@ -912,33 +914,33 @@
 
     .grid-col .gc:first-child {
         position: absolute;
-        top: -10px;
-        left: 22px;
+        top: -4px;
+        left: 75px;
     }
 
     .grid-col .gc:nth-child(2) {
         position: absolute;
-        top: -10px;
-        right: 22px;
+        top: -4px;
+        right: 75px;
     }
 
     .grid-col .gc.centerer {
         position: absolute;
-        top: 35px;
+        top: 64px;
         left: 50%;
         margin-left: -90px;
     }
 
     .grid-col .gc:nth-child(4) {
         position: absolute;
-        top: 90px;
-        left: 22px;
+        top: 144px;
+        left: 75px;
     }
 
     .grid-col .gc:nth-child(5) {
         position: absolute;
-        top: 90px;
-        right: 22px;
+        top: 144px;
+        right: 75px;
     }
 
     .jumbo {
@@ -954,7 +956,7 @@
         font-weight: 700;
         font-size: 36px;
         line-height: 120%;
-        text-align: center;
+        text-align: left;
         background: linear-gradient(90.4deg, rgba(201, 76, 244, 0.3) -32.37%, rgba(37, 203, 255, 0.3) 93.03%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -968,14 +970,18 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 150%;
-        text-align: center;
+        text-align: left;
         background: linear-gradient(88.74deg, rgba(201, 76, 244, 0.3) -8.16%, rgba(37, 203, 255, 0.3) 58.17%), #FFFFFF;
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         background-clip: text;
         text-shadow: 0px 1.42104px 11.3683px rgba(0, 0, 0, 0.25);
-        max-width: 430px;
+        max-width: auto;
         margin: 0 auto;
+    }
+
+    .jumbo-screen-end-block {
+        position: relative;
     }
 
     #second-jumbo.jumbo {
@@ -1334,7 +1340,7 @@
     }
 
     .subscribe-box .text {
-        max-width: 300px;
+        max-width: 550px;
         margin: 0 auto;
         font-family: 'Poppins';
         font-style: normal;
@@ -1417,8 +1423,8 @@
     }
 
     .card-about {
-        width: 215px;
-        margin: 0 auto 40px;
+        width: 325px;
+        margin: 0 auto 25px;
     }
 
     .in-card-about {
@@ -1442,7 +1448,7 @@
     }
 
     #subscribe {
-        height: 700px;
+        height: 390px;
     }
 
     .in-subscribe {
@@ -1668,7 +1674,7 @@
     .work-box-first .work-box-end,
     .work-box-third .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 70px;
     }
 
     .work-box-end .pre-text {
@@ -1709,7 +1715,7 @@
 
     .work-box-second .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 70px;
     }
 
     .work-box-second::before {
@@ -1755,7 +1761,7 @@
 
     .work-box-third .work-box-end {
         padding: 0 30px 0;
-        margin-top: 25px;
+        margin-top: 70px;
     }
 
     .work-box-third::before {
@@ -1881,7 +1887,7 @@
 
     .card-section {
         margin-top: 30px;
-        height: 900px;
+        height: 630px;
         position: relative;
     }
 
@@ -1956,7 +1962,7 @@
         font-family: 'Poppins';
         font-style: normal;
         font-weight: 700;
-        font-size: 130px;
+        font-size: 120px;
         line-height: 154px;
         letter-spacing: -0.03em;
         background: linear-gradient(272.72deg, rgba(66, 0, 255, 0.1) -47.34%, rgba(92, 157, 255, 0.1) 100.35%), #FFFFFF;
@@ -2042,7 +2048,7 @@
     }
 
     .in-road-card {
-        height: 100%;
+        height: 250px;
         position: relative;
         overflow: hidden;
         border-radius: 10px;
@@ -2114,13 +2120,13 @@
     }
 
     ul.nav-tabs-map {
-        margin-top: 40px;
+        margin-top: 150px;
         display: flex;
-        flex-wrap: nowrap;
+        flex-wrap: grow;
     }
 
     ul.nav-tabs-map li.nav-item {
-        margin-bottom: 0;
+        margin-bottom: 40px;
         text-align: right;
         display: inline-block;
         width: 100%;
