--- a/style/xs.css
+++ b/style/xs.css
@@ -1146,7 +1146,7 @@
     #fourth-jumbo::before {
         content: '';
         position: absolute;
-        width: 375px;
+        width: 130px;
         height: 600px;
         left: 0px;
         top: 0px;
@@ -1217,7 +1217,7 @@
     #fifth-jumbo::before {
         content: '';
         position: absolute;
-        width: 604px;
+        width: 325px;
         height: 375px;
         left: 0px;
         top: 0px;
@@ -1632,7 +1632,7 @@
         width: 326px;
         height: 326px;
         left: 50%;
-        margin-left: -210px;
+        margin-left: -175px;
         top: 0px;
         border-radius: 11.8586px;
         transform: matrix(-1, 0, 0, 1, 0, 0);
@@ -1807,7 +1807,7 @@
 
     .work-card .card-body {
         background: linear-gradient(78.84deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.21) 98.69%), rgba(255, 255, 255, 0.06);
-        backdrop-filter: blur(10.2917px);
+        backdrop-filter: blur(0);
         padding: 15px 17px;
     }
 
